feat(game-questions): replace vectors with global categories
